Pre .gitignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .gitignore.swp
 .gitignore~
 .README.md.un~
+.README.md.swp
 README.md~
 Kickstarter_Challenge.xlsx
 Kickstarter_Challenge_Copy.xlsx
